--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Students -- Germany'
 - !lcc 'LA'
+- GITenberg
 title: The Student-Life of Germany
 url: http://www.gutenberg.org/ebooks/36576
